configurations/bookinfo-gateway.yaml
---
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  servers:
    - port:
        number: 8080
        protocol: HTTP
        name: http
      tls:
        httpsRedirect: true
      hosts:
        - bookinfo.nafey.online
    - port:
        number: 443
        protocol: HTTPS
        name: https
      hosts:
        - bookinfo.nafey.online
      tls:
        credentialName: bookinfo-nafey-online-tls
        mode: SIMPLE
  selector:
    istio: ingressgateway
